# python-typechecked

./: CHANGELOG.rst  README.md  README.rst  bootstrap.py  pyproject.toml  test_plan.py
documentation/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/.doctrees/: environment.pickle  index.doctree
documentation/.doctrees/source/: modules.doctree  typechecked.doctree
documentation/_modules/: index.html
documentation/_modules/typechecked/: _type_hints.html
documentation/_modules/typechecked/_exceptions/: _recursion_error.html  _type_error.html  _value_error.html
documentation/_modules/typechecked/_immutable/: _immutable.html  _protocol.html
documentation/_static/: documentation_options.js
documentation/source/: modules.html  typechecked.html
src/typechecked/: __init__.py  _check_result.py  _generic.py  _meta.py  _options.py  _primitives.py  _type_hints.py  _typechecked.py  _validate.py
src/typechecked/_collections_abc/: _callable.py  _collection.py  _iterable.py  _mapping.py  _sequence.py  _set.py
src/typechecked/_doc_utils/: _enum_docstrings.py
src/typechecked/_error_tags/: _type_hints.py
src/typechecked/_exceptions/: _recursion_error.py  _tagged_exception.py  _type_error.py  _value_error.py
src/typechecked/_immutable/: __init__.py  _immutable.py  _protocol.py
src/typechecked/_typing/: __init__.py  _literal.py  _typeddict.py  _typeddict_key_info.py  _union.py
src/typechecked/_validation_cache/: _cache.py  _cache_entry.py  _cache_key.py
tests/: test_is_immutable.py  test_is_immutable_data_typehint.py  test_isinstance_of_typehint.py  test_typechecked.py
tests/testspec/: assertions.py  base.py  tagged_exception.py
tests/testspec/tests/: test_assertions.py
